--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
         <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
-        <title>Test App</title>
+        <title>Kanye Quotes</title>
         <link rel="stylesheet" href="main.css">
         <style>
             /* Show it is fixed to the top */
@@ -29,19 +29,26 @@
     <body>
 
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="#">Test App</a>
-
+            <a class="navbar-brand" href="#">Kanye Qutoes</a>
         </nav>
 
 
         <div class="container">
-            <div class="row" id="projects">
 
+          <div class="row justify-content-center" id="result">
+             
+          </div>
 
-
-            </div>
+         <div class="row justify-content-center">
+            <button id="myBtn" class="btn text-white bg-dark" href="#!" role="button">
+              Get Quote
+              <i class="fas fa-arrow-rotate-right"></i>
+            </button>
+          </div>
 
         </div>
+
+      
 
 
 
