--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,10 @@
 
         <div class="container">
 
-          <div class="row justify-content-center" id="result">
-             
+          <div class="row justify-content-center" >
+             <div class="accordion col" style="margin:15px; " id="result">
+              
+            </div>
           </div>
 
          <div class="row justify-content-center">
