--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <body>
 
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="#">Kanye Qutoes</a>
+            <a class="navbar-brand" href="#">Kanye Quotes</a>
         </nav>
 
 
